--- a/_profiles/default.html
+++ b/_profiles/default.html
@@ -25,7 +25,7 @@ parameters:
   connectivity: "Cable"
   location: "Dulles:Chrome"
   runs: 1
-  url: "https://next.wellcomecollection.org"
+  url: "https://next.wellcomecollection.org/articles/a-drop-in-the-ocean-daniel-regan"
 
 #
 # Performance budgets are defined with a metric id, a max/min allowed value
