--- a/_profiles/v2-explore-uk.html
+++ b/_profiles/v2-explore-uk.html
@@ -3,7 +3,7 @@
 # The human-friendly name of the profile. Whenever you're asked for the profile
 # ID, it refers to the name of the profile file — in this case, "default".
 #
-name: "V2: Explore landing"
+name: "V2: Explore landing UK"
 
 #
 # The default profile will be the one shown when accessing the root URL of your
@@ -23,7 +23,7 @@ interval: 12
 #
 parameters:
   connectivity: "Cable"
-  location: "Dulles:Chrome"
+  location: "Manchester:Chrome"
   runs: 1
   url: "https://next.wellcomecollection.org/explore"
 
