--- a/_profiles/v2-explore.html
+++ b/_profiles/v2-explore.html
@@ -3,13 +3,13 @@
 # The human-friendly name of the profile. Whenever you're asked for the profile
 # ID, it refers to the name of the profile file — in this case, "default".
 #
-name: "V2: Article"
+name: "V2: Explore landing"
 
 #
 # The default profile will be the one shown when accessing the root URL of your
 # SpeedTracker site.
 #
-default: true
+default: false
 
 #
 # If you want tests to be repeated automatically, you can an interval (in hours)
@@ -25,7 +25,7 @@ parameters:
   connectivity: "Cable"
   location: "Manchester"
   runs: 1
-  url: "https://next.wellcomecollection.org/articles/a-drop-in-the-ocean-daniel-regan"
+  url: "https://next.wellcomecollection.org/explore"
 
 #
 # Performance budgets are defined with a metric id, a max/min allowed value
