Changed test interval to once a day

--- a/_profiles/v2-homepage.html
+++ b/_profiles/v2-homepage.html
@@ -9,14 +9,14 @@ name: "V2: Homepage"
 # The default profile will be the one shown when accessing the root URL of your
 # SpeedTracker site.
 #
-default: true
+default: false
 
 #
 # If you want tests to be repeated automatically, you can an interval (in hours)
 # with a minimum value of 12, as only two scheduled tests per day are allowed.
 # To disabled repeated tests, simply remove this property from the profile.
 #
-interval: 12
+interval: 24
 
 #
 # WebPageTest test parameters
