changed location to Ireland

--- a/_profiles/v1-homepage.html
+++ b/_profiles/v1-homepage.html
@@ -23,7 +23,7 @@ interval: 24
 #
 parameters:
   connectivity: "Cable"
-  location: "Dulles:Chrome"
+  location: "ec2-eu-west-1"
   runs: 1
   url: "https://wellcomecollection.org/"
 
