--- a/_profiles/v2-article.html
+++ b/_profiles/v2-article.html
@@ -23,7 +23,7 @@ interval: 24
 #
 parameters:
   connectivity: "Cable"
-  location: "Manchester"
+  location: "ec2-eu-west-1"
   runs: 1
   url: "https://next.wellcomecollection.org/articles/a-drop-in-the-ocean-daniel-regan"
 
