--- a/_profiles/homepage.html
+++ b/_profiles/homepage.html
@@ -3,7 +3,7 @@
 # The human-friendly name of the profile. Whenever you're asked for the profile
 # ID, it refers to the name of the profile file — in this case, "default".
 #
-name: "V1: Homepage"
+name: "Homepage"
 
 #
 # The default profile will be the one shown when accessing the root URL of your
@@ -25,7 +25,7 @@ parameters:
   connectivity: "Cable"
   location: "ec2-eu-west-1"
   runs: 1
-  url: "https://wellcomecollection.org/"
+  url: "https://next.wellcomecollection.org/"
 
 #
 # Performance budgets are defined with a metric id, a max/min allowed value
@@ -36,13 +36,17 @@ parameters:
 #
 # https://github.com/speedtracker/speedtracker-api/blob/master/lib/SpeedTracker.js#L18-L37
 #
-# budgets:
-#  -
-#    metric: TTFB
-#    max: 600
-#    alerts: ["emailAlert", "slackAlert"]
-#  -
-#    metric: firstPaint
-#    max: 100
-#    alerts: ["slackAlert"]
+budgets:
+  -
+    metric: TTFB
+    max: 500
+    alerts: ["slackAlert"]
+  -
+    metric: firstPaint
+    max: 1500
+    alerts: ["slackAlert"]
+  -
+    metric: SpeedIndex
+    max: 2500
+    alerts: ["slackAlert"]
 ---
