--- a/_profiles/article.html
+++ b/_profiles/article.html
@@ -23,7 +23,7 @@ interval: 12
 #
 parameters:
   connectivity: "Cable"
-  location: "ec2-eu-west-1"
+  location: "London_EC2"
   runs: 1
   url: "https://next.wellcomecollection.org/articles/a-drop-in-the-ocean-daniel-regan"
 
