don’t point to next

--- a/_profiles/article.html
+++ b/_profiles/article.html
@@ -25,7 +25,7 @@ parameters:
   connectivity: "Cable"
   location: "London_EC2"
   runs: 1
-  url: "https://next.wellcomecollection.org/articles/a-drop-in-the-ocean-daniel-regan"
+  url: "https://wellcomecollection.org/articles/a-drop-in-the-ocean-daniel-regan"
 
 #
 # Performance budgets are defined with a metric id, a max/min allowed value
