--- a/_profiles/explore.html
+++ b/_profiles/explore.html
@@ -25,7 +25,7 @@ parameters:
   connectivity: "Cable"
   location: "London_EC2"
   runs: 1
-  url: "https://next.wellcomecollection.org/explore"
+  url: "https://wellcomecollection.org/explore"
 
 #
 # Performance budgets are defined with a metric id, a max/min allowed value
