--- a/_profiles/works.html
+++ b/_profiles/works.html
@@ -25,7 +25,7 @@ parameters:
   connectivity: "Cable"
   location: "London_EC2"
   runs: 1
-  url: "https://next.wellcomecollection.org/works?query=david&cohort=platformTeam"
+  url: "https://wellcomecollection.org/works?query=david&cohort=platformTeam"
 
 #
 # Performance budgets are defined with a metric id, a max/min allowed value
