--- a/_profiles/work.html
+++ b/_profiles/work.html
@@ -29,7 +29,7 @@ parameters:
 
 #
 # Performance budgets are defined with a metric id, a max/min allowed value
-# (in milliseconds), and done or multiple alerts — referenced by the ids defined
+# (in milliseconds), and one or multiple alerts — referenced by the ids defined
 # in the main config — to be triggered when a budget is overrun.
 #
 # For a list of metrics, check:
